--- a/tfm/index.html
+++ b/tfm/index.html
@@ -634,7 +634,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
-			<p class="main-title bhf-hidden" itemprop="headline"><a href="index.html" title="DBZ Coin" rel="home">DBZ Coin</a></p>
+			<p class="main-title bhf-hidden" itemprop="headline"><a href="index.html" title="TFM Token" rel="home"></a></p>
 					<div data-elementor-type="wp-post" data-elementor-id="874" class="elementor elementor-874" data-elementor-settings="[]">
 							<div class="elementor-section-wrap">
 							<section class="elementor-section elementor-top-section elementor-element elementor-element-69d4f78 elementor-section-stretched elementor-hidden-phone elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="69d4f78" data-element_type="section" id="lg-header" data-settings="{&quot;stretch_section&quot;:&quot;section-stretched&quot;,&quot;background_background&quot;:&quot;classic&quot;}">
@@ -1242,7 +1242,7 @@ As the coin and technology grows it will also be used when building our own Bloc
                 <div class="twae-data-container ">
                     <span class="twae-title">Coin Launch</span>
                     
-                    <div class="twae-description"><p>June 2021</p></div>
+                    <div class="twae-description"><p>September 2021</p></div>
                 </div>
             </div>
         </article><article class="twae-timeline-entry twae-right-aligned">
@@ -1255,7 +1255,7 @@ As the coin and technology grows it will also be used when building our own Bloc
                 <div class="twae-data-container ">
                     <span class="twae-title">Exchange Listings</span>
                     
-                    <div class="twae-description"><p>July 2021</p></div>
+                    <div class="twae-description"><p>October 2021</p></div>
                 </div>
             </div>
         </article><article class="twae-timeline-entry twae-left-aligned">
