--- a/tfm/index.html
+++ b/tfm/index.html
@@ -840,9 +840,9 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 				<div class="elementor-element elementor-element-7720783 elementor-align-left button-trans elementor-widget elementor-widget-button" data-id="7720783" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="../external.html?link=https://coinmarketcap.com/currencies/diamond-boyz-coin/" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://bscscan.com/address/0x114f4edd00e2a803c464cd1fb2c103f2b2ef27e0" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">See on CMC</span>
+						<span class="elementor-button-text">See on Contract</span>
 		</span>
 					</a>
 		</div>
