--- a/tfm/index.html
+++ b/tfm/index.html
@@ -820,7 +820,8 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 				
 				<div class="elementor-element elementor-element-9adeefe elementor-widget elementor-widget-heading" data-id="9adeefe" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><i><b><span style="font-size: 16px;">Token Farmer Finance (TFM) is a reflection token with an auto-claim, auto-stalking and Multiplier feature (leverage mining) built on the Bsc network. Simply holding $TFM tokens in your wallet earns you USDT, BNB, SOL, & XRP.</span></b></i></p>		</div>
+			<p class="elementor-heading-title elementor-size-default"><i><b><span style="font-size: 16px;">Token Farmer Finance (TFM) is a reflection token with an auto-claim, auto-stalking and Multiplier feature (leverage mining) built on the Bsc network. By simply holding $TFM tokens in your wallet, you get rewarded with USDT (Tether), BNB (Binance token), SOL (Solana), & XRP ( Ripple).
+</span></b></i></p>		</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-e1934b5 padding-zero elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="e1934b5" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
@@ -942,7 +943,8 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-88157e5 font-bold elementor-widget elementor-widget-heading" data-id="88157e5" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><b> What we are trying to do is create a perpetual deflation token, token farmer ($TFM), that allows a constant price pump with a sufficient burn mechanism. We are not trying to replace the swap & exchange but to add value into the system and create a suitable and sustainable environment for people to yield farm with high ROI of up to 7% every 3days.
+			<p class="elementor-heading-title elementor-size-default"><b> What we are trying to do is create a perpetual deflation token, token farmer ($TFM), that allows a constant price pump with a sufficient burn mechanism. We are not trying to replace the swap & exchange but to add value into the system and create a suitable and sustainable environment for people to earn high rewards of up to 7% every 3days for holding TMF tokens.
+
 
 <br><br>
 As the coin and technology grows it will also be used when building our own Blockchain called the "Farmers Chain" that is much more complex and will help to facilitate and provide higher yeild for holders. </b></p>		</div>
