--- a/tfm/index.html
+++ b/tfm/index.html
@@ -943,7 +943,9 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-88157e5 font-bold elementor-widget elementor-widget-heading" data-id="88157e5" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><b> What we are trying to do is create a perpetual deflation token, token farmer ($TFM), that allows a constant price pump with a sufficient burn mechanism. We are not trying to replace the swap & exchange but to add value into the system and create a suitable and sustainable environment for people to earn high rewards of up to 7% of the value of TMF tokens present in your wallet.
+			<p class="elementor-heading-title elementor-size-default"><b> What we are trying to do is create a perpetual deflation token, token farmer ($TFM), that allows a constant price pump with a sufficient burn mechanism. We are not trying to replace the swap & exchange but to add value into the system and create a suitable and sustainable environment for users to earn high rewards of up to 7% of the value of TMF tokens present in their wallet using automated Yield Farming.
+
+
 
 
 <br><br>
