--- a/tfm/index.html
+++ b/tfm/index.html
@@ -814,14 +814,14 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-3e227cb text-gradient elementor-widget elementor-widget-heading" data-id="3e227cb" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Token Farmer Finance</h2>	
+			<h2 class="elementor-heading-title elementor-size-default">Diversify, HODL & Yield. All in a safe way!</h2>	
 			<h4> Buy 1 token, invest in many</h4></div>
 				</div>
 				
 				<div class="elementor-element elementor-element-9adeefe elementor-widget elementor-widget-heading" data-id="9adeefe" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><i><b><span style="font-size: 16px;">Token Farmer Finance (TFM) is a reflection token with an auto-claim, auto-stalking and Multiplier feature (leverage mining) built on the Bsc network. By simply holding $TFM tokens in your wallet, you get rewarded with USDT (Tether), BNB (Binance Coin), SOL (Solana), & XRP (Ripple).
-</span></b></i></p>		</div>
+			<p class="elementor-heading-title elementor-size-default"><i><b><span style="font-size: 16px;">Gain exposure in an easy and fast way to several crypto assets represented by a single token. Earn passive yield by Hodling $TFM All in a safe way.
+
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-e1934b5 padding-zero elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="e1934b5" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
@@ -943,13 +943,14 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-88157e5 font-bold elementor-widget elementor-widget-heading" data-id="88157e5" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><b> What we are trying to do is create a perpetual deflation token, token farmer ($TFM), that allows a constant price pump with a sufficient burn mechanism. We are not trying to replace the swap & exchange but to add value into the system and create a suitable and sustainable environment for users to earn high rewards of up to 7% of the value of TMF tokens present in their wallet using automated Yield Farming.
+			<p class="elementor-heading-title elementor-size-default"><b> Token Farmer Finance (TFM) is the first of its kind, using complex blockchain technology built on the Bsc network with an auto-claim, auto-stalking and Multiplier feature (leverage mining). It is a multiple reflection token with an auto-claim feature. Simply hold $TFM tokens in your wallet and you'll earn BNB (Binance coin), SOL (Solana), XRP (Ripple), USDT (Tether).
+
 
 
 
 
 <br><br>
-As the coin and technology grows it will also be used when building our own Blockchain called the "Farmers Chain" that is much more complex and will help to facilitate and provide higher yeild for holders. </b></p>		</div>
+As the coin and technology grows it will also be used when building our own Blockchain called the "Farmers Chain" that is much more complex and will help to facilitate and reward farmers (Holders) with multiple havest (Yield). </b></p>		</div>
 				</div>
 					</div>
 		</div>
@@ -1189,7 +1190,7 @@ As the coin and technology grows it will also be used when building our own Bloc
 				</div>
 				<div class="elementor-element elementor-element-38dccd5 elementor-widget elementor-widget-heading" data-id="38dccd5" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-xl">TFM aims to be the leader in yield farming by providing multiple token rewards to holders. Our token will be the future of trading by also providing high reward with minimal risk by investing capital into Launch-pools with 7% ROI.</p>		</div>
+			<p class="elementor-heading-title elementor-size-xl">TFM aims to be the top reward tokens by providing multiple token rewards to holders. Our token will be the future of earning reward by also providing high rewards with minimal risk.</p>		</div>
 				</div>
 				<div class="elementor-element elementor-element-21782c9 back-stroke elementor-absolute elementor-widget elementor-widget-heading" data-id="21782c9" data-element_type="widget" data-settings="{&quot;_position&quot;:&quot;absolute&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
