--- a/tfm/index.html
+++ b/tfm/index.html
@@ -943,7 +943,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-88157e5 font-bold elementor-widget elementor-widget-heading" data-id="88157e5" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default"><b> Token Farmer Finance (TFM) is the first of its kind, using complex blockchain technology built on the Bsc network with an auto-claim, auto-stalking and Multiplier feature (leverage mining). It is a multiple reflection token with an auto-claim feature. Simply hold $TFM tokens in your wallet and you'll earn BNB (Binance coin), SOL (Solana), XRP (Ripple), USDT (Tether).
+			<p class="elementor-heading-title elementor-size-default"><b> Token Farmer Finance (TFM) is a multiple reflection token with an auto-claim feature. The first of its kind using complex blockchain technology built on the Bsc network with an auto-stalking and Multiplier feature (leverage mining). Simply hold $TFM tokens in your wallet and you'll earn BNB (Binance coin), SOL (Solana), XRP (Ripple), USDT (Tether).
 
 
 
