--- a/tfm/index.html
+++ b/tfm/index.html
@@ -841,9 +841,9 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 				<div class="elementor-element elementor-element-7720783 elementor-align-left button-trans elementor-widget elementor-widget-button" data-id="7720783" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://bscscan.com/address/0x420f5b4c3224ea8670e5938e56f3d761c11c2694" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://poocoin.app/tokens/0x420f5b4c3224ea8670e5938e56f3d761c11c2694" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">See on Contract</span>
+						<span class="elementor-button-text">Chart</span>
 		</span>
 					</a>
 		</div>
