--- a/tfm/index.html
+++ b/tfm/index.html
@@ -862,7 +862,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="alert" style="display:none;">Copy Address </div>
 <div class="alert-sucess" style="display:none;">Address Copied </div>
 <a href="javascript:void(0);"  class="copy-code copy-btn" data-clipboard-text="0xDD8724743Bdf188E8Be89b9090EC8dE12c48AEb9"  >0xDD8724743Bdf188E8Be89b9090EC8dE12c48AEb9 <span class="copy-icon">
-<i class=""><span class="tooltiptext">Copy Address</span></i>
+<i class="cust-copy far fa-copy"><span class="tooltiptext">Copy Address</span></i>
 <i class="cust-check fas fa-check" style="display:none;"><span class="tooltiptext">Address Copied</span></i>
 </span> </a>		</div>
 				</div>
