--- a/tfm/index.html
+++ b/tfm/index.html
@@ -806,7 +806,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-fe79463 elementor-widget elementor-widget-image" data-id="fe79463" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-						We wish to Apologies for the problem many hodlers encounter while holding $TFM in their wallets,The malfunction in the code was fix and $TFM will be relaunch before the end of November 2021. Buyers from the last contract address should submit their new $TFM wallet address to get refunds and the new $TFM for free at launch.....
+						We wish to Apologies for the problem many hodlers encounter while holding $TFM in their wallets,The malfunction in the code was fix and $TFM will be relaunch before the end of November 2021. Buyers from the last contract address should submit their new $TFM wallet address to contact@tokenfarmer.digital to get refunds and the new $TFM for free at launch.....
 						<br>
 
 Sorry for the inconvenience. We hope to be able to create a stronger community with the devs and Token Farmer with the highest reflection rewards.
