--- a/tfm/launchpad/index.html
+++ b/tfm/launchpad/index.html
@@ -632,7 +632,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 <div id="page" class="hfeed site">
 
 		<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
-			<p class="main-title bhf-hidden" itemprop="headline"><a href="../index.html" title="DBZ Coin" rel="home">DBZ Coin</a></p>
+			<p class="main-title bhf-hidden" itemprop="headline"><a href="../index.html" title="DBZ Coin" rel="home">TFM Coin</a></p>
 					<div data-elementor-type="wp-post" data-elementor-id="874" class="elementor elementor-874" data-elementor-settings="[]">
 							<div class="elementor-section-wrap">
 							<section class="elementor-section elementor-top-section elementor-element elementor-element-69d4f78 elementor-section-stretched elementor-hidden-phone elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="69d4f78" data-element_type="section" id="lg-header" data-settings="{&quot;stretch_section&quot;:&quot;section-stretched&quot;,&quot;background_background&quot;:&quot;classic&quot;}">
@@ -831,13 +831,11 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 <div class="team-block">
 <div class="gradient-wrap">
 <div class="imgcircle">
-<img src="./BiShares - BSC dETF&#39;s - About_files/defivlad.jpg" alt="BiShares Team" class="img-fluid">
 </div>
 </div>
 <h3>DeFi Vlad</h3>
 <span>Co-Founder</span>
 <ul>
-<li><a href="https://twitter.com/defivlad" target="_blank"><img src="./BiShares - BSC dETF&#39;s - About_files/twitter.svg" alt="Twitter logo" class="img-fluid"></a></li>
 <li><a href="https://y.at/%F0%9F%A6%8D%F0%9F%92%A8%F0%9F%92%8E" target="_blank"><img src="./BiShares - BSC dETF&#39;s - About_files/yat-logo.svg" alt="Yat logo" class="img-fluid"></a></li>
 </ul>
 </div>
