--- a/tfm/index.html
+++ b/tfm/index.html
@@ -673,7 +673,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 <li id="menu-item-918" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item parent hfe-creative-menu"><a href="index.html#roadmap" class = "hfe-menu-item">Roadmap</a></li>
 <li id="menu-item-1688" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="white-paper/index.html" class = "hfe-menu-item">Tokenomics</a></li>
 <li id="menu-item-921" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="../external.html?link=https://t.me/dbzcoinenglish" class = "hfe-menu-item">Contact</a></li>
-<li id="menu-item-3370" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="launchpad/index.html" class = "hfe-menu-item">Launchpad</a></li>
+<li id="menu-item-3370" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="launchpad/index.html" class = "hfe-menu-item">Team</a></li>
 </ul></nav>              
 			</div>
 					</div>
@@ -762,7 +762,7 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 <li id="menu-item-2604" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2604 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="white-paper/index.html" class="ekit-menu-nav-link">Tokenomics</a></li>
 <li id="menu-item-2605" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2605 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="https://youtube.com/channel/UCIw1qfcg6dz9RiSnuFvnIuA" class="ekit-menu-nav-link">Video FAQ</a></li>
 <li id="menu-item-2606" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2606 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="https://t.me/TokenFarmerFinance" class="ekit-menu-nav-link">Contact</a></li>
-<li id="menu-item-3371" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3371 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="launchpad/index.html" class="ekit-menu-nav-link">Launchpad</a></li>
+<li id="menu-item-3371" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3371 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="launchpad/index.html" class="ekit-menu-nav-link">Team</a></li>
 <li id="menu-item-2607" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2607 nav-item elementskit-mobile-builder-content" data-vertical-menu=750px><a href="get-tfm/index.html" class="ekit-menu-nav-link">Get TFM</a></li>
 </ul>
 				<div class="elementskit-nav-identity-panel">
