--- a/tfm/index.html
+++ b/tfm/index.html
@@ -841,9 +841,9 @@ ul.cust-buy-list li, ol.cust-buy-list li {
 				<div class="elementor-element elementor-element-7720783 elementor-align-left button-trans elementor-widget elementor-widget-button" data-id="7720783" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://poocoin.app/tokens/0xDD8724743Bdf188E8Be89b9090EC8dE12c48AEb9" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://pancakeswap.finance/swap?outputCurrency=0xDD8724743Bdf188E8Be89b9090EC8dE12c48AEb9" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">Chart</span>
+						<span class="elementor-button-text">Buy Now</span>
 		</span>
 					</a>
 		</div>
